--- a/mystyle.css
+++ b/mystyle.css
@@ -35,12 +35,16 @@ html {
   --mono-font:       monospace;
   --body-font:       "Lato", sans-serif;
   --navbar-font:     "Lato", sans-serif;  /* websites + blogs only */
-  --webkit-font-smoothing: antialiased;
-  --moz-osx-font-smoothing: grayscale;
 }
 
 
-
+body {
+  color: rgba(51, 51, 51, 1);
+  webkit-font-smoothing: antialiased;
+  moz-osx-font-smoothing: grayscale;
+}
+  
+  
 /*-- ARTICLE METADATA --*/
 d-byline {
   --heading-size:    0.6rem;
